# neuwuronka

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp  run.sh  task.md  tmp.py
neuwuronka/: main  main.cpp  math.hpp  matrix.hpp  struct.hpp  vector.hpp
neuwuronka/main.dSYM/Contents/Resources/DWARF/: main
neuwuronka/nn/: mlp.hpp  module.hpp  new_mlp.hpp
src/: layer.hpp  main.cpp  main.rs  math.hpp  matrix.hpp  matrix.rs  network.hpp  vector.hpp
